<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="setting_phonenumtip">我的手机号:</string>
    <string name="helps_smstag_hint">当朋友发此短信内容时,软件会自动回复当前地址</string>
    <string name="app_versionCode">2</string>
    <string name="app_versionName">0.0.2</string>
    <string name="hello">最近记录</string>
    <string name="app_name">任你行定位软件</string>

<string name="menu_main">主界面</string>  
 <string name="phonefrom">电话来自</string>  
<string name="menu_back">返回</string>
    <string name="menu_new">新建跟踪</string>
    <string name="menu_go">开始跟踪</string>
    <string name="menu_con">继续跟踪</string>
    <string name="menu_setting">个人设置</string>
    <string name="meun_help">帮助信息</string>
    <string name="meun_exit">退出</string>
    
    <!--新建跟踪界面-->
    <string name="new_tips">输入跟踪的名字和一段描述</string>
    <string name="new_name">跟踪名:</string>
    <string name="new_desc">跟踪描述:</string>
    <string name="new_submit">确定</string>
    <string name="new_name_null">跟踪名不能为空.</string>
    <string name="new_fail">新建跟踪失败.</string>
    
        <!--个人设置界面-->
    <string name="setting_tips">选择你的个人设置</string>
    <string name="setting_usrnametip">用户名:</string>
    <string name="setting_passwordtip">密码:</string>
    <string name="setting_logintesttip">注册 </string>

   <string name="setting_smstagtip">短信定位标识 :</string>
    <string name="setting_gps">GPS更新频率:</string>
    <string name="setting_map_level">默认地图等级:</string>
    <string name="setting_submit">确定</string>
    <string name="setting_null">个人设置不能为空.</string>
    <string name="setting_fail">个人设置失败.</string>
    <string name="setting_ok">个人设置成功.</string>
   <string name="spinner_gps_prompt">选择更新频率(秒)</string>
   <string name="spinner_map_prompt">选择地图默认等级</string>
   <string name="setting_logintesetok">注册成功.</string>
   <string name="setting_logintesetfail">注册失败.</string>
   <string name="setting_usrnameinputerror">请输入用户名.</string>
   <string name="setting_pwdinputerror">请输入密码.</string>
      <string name="setting_nosleepstring">防止睡眠.</string>
   
         <!--帮助信息界面-->
    <string name="version"><b>版本信息：</b></string> 
    <string name="helps_infos"><b>帮助信息：</b></string> 
    <string name="author"><b>作者信息：</b></string> 
    <string name="checkupdate">检查更新 </string>
    
        <!-- 地图展示 -->
    <string name="satellite">卫星</string> 
    <string name="traffic">交通</string> 
    <string name="street">街景</string> 
   <!-- 标识短信 -->
<string name="setting_smstaginputerror">请输入三个或以上中英文</string>
<integer-array name="setting_smstaginputcharnum"><item> 3 </item>
</integer-array>
</resources>
