<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
android:id="@+id/widget27"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical"
>
<TextView
android:id="@+id/version"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:text="@string/version"
>
</TextView>
<TextView
android:id="@+id/version_text"
android:layout_width="fill_parent"
android:layout_height="wrap_content" android:text="@string/app_versionName">
</TextView>
<TextView
android:id="@+id/help"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:text="@string/helps_infos"
>
</TextView>
<TextView
android:id="@+id/help_text"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:text="@string/helps_text"
>
</TextView>
<TextView
android:id="@+id/author"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:text="@string/author"
>
</TextView>
<TextView
android:id="@+id/author_text"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:text="@string/author_text"
android:autoLink="all"
>
</TextView>

<Button android:id="@+id/helps_button1"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
android:text="@string/checkupdate" 
	/>  
</LinearLayout>
